page1 chart fix6

--- a/p1winter.html
+++ b/p1winter.html
@@ -84,14 +84,18 @@
 
       // Append the path for the USA line
       svg.append("path")
-        .datum(dataFilteredUSA)
-        .attr("class", "line")
-        .style("stroke", "blue")
-        .attr("d", lineUSA);
+      .datum(dataFilteredUSA)
+      .attr("stroke", "steelblue")
+      .attr("stroke-width", 1.5)
+      .attr("d", d3.line()
+        .x(function(d) { return x(d.Year) })
+        .y(function(d) { return y(d.GPCT) })
+        )
+
 
       // Append the path for the RUS line
-      svg.append("path")
-        .datum(dataFilteredRUS)
+      svg.append("path").
+      datum(dataFilteredUSA)
         .attr("class", "line")
         .style("stroke", "red")
         .attr("d", lineRUS);
