--- a/p1winter.html
+++ b/p1winter.html
@@ -66,11 +66,11 @@
 
       // Set the scales for x and y axes
       var x = d3.scaleLinear()
-        .domain(d3.extent(data, d => d.Year))
+        .domain(d3.extent(dataFilteredUSA, d => d.Year))
         .range([0, width]);
   
       var y = d3.scaleLinear()
-        .domain([0, d3.max(data, d => d.GPCT)])
+        .domain([0, d3.max(dataFilteredUSA, d => d.GPCT)])
         .range([height, 0]);
   
       // Create the line generators
