--- a/p1winter.html
+++ b/p1winter.html
@@ -94,7 +94,7 @@
       .attr("d", d3.line()
         .x(function(d) { return x(d.Year) })
         .y(function(d) { return y(d.GPCT) })
-        )
+        );
 
 
       // Append the path for the RUS line
@@ -102,7 +102,10 @@
       datum(dataFilteredUSA)
         .attr("class", "line")
         .style("stroke", "red")
-        .attr("d", lineRUS);
+        .attr("d", d3.line()
+        .x(function(d) { return x(d.Year) })
+        .y(function(d) { return y(d.GPCT) })
+        );
   
       // Add x-axis
       svg.append("g")
