page1 chart fix11

--- a/p1winter.html
+++ b/p1winter.html
@@ -98,7 +98,7 @@
 
 
       // Append the path for the RUS line
-      svg.append("path").
+      svg.append("path")
       .datum(dataFilteredRUS)
       .attr("stroke", "red")
       .attr("stroke-width", 1.5)
