--- a/p1winter.html
+++ b/p1winter.html
@@ -44,60 +44,40 @@
     // Load data from the CSV file
     d3.csv("winter.csv").then(function (data) {
       // Filter data for 'Country=USA'
-      var dataFilteredUSA = data.filter(function (d) {
+      var dataFiltered = data.filter(function (d) {
         return d.Country === 'USA';
       });
   
-      // Filter data for 'Country=RUS'
-      var dataFilteredRUS = data.filter(function (d) {
-        return d.Country === 'RUS';
-      });
-
       // Convert data to numeric values
-      dataFilteredUSA.forEach(function (d) {
+      dataFiltered.forEach(function (d) {
         d.Year = +d.Year;
         d.GPCT = +d.GPCT;
       });
-
-      dataFilteredRUS.forEach(function (d) {
-        d.Year = +d.Year;
-        d.GPCT = +d.GPCT;
-      });
-
-      // Get the minimum and maximum values of 'Year' for the filtered data
-      var xMin = d3.min([...dataFilteredUSA, ...dataFilteredRUS], d => d.Year);
-      var xMax = d3.max([...dataFilteredUSA, ...dataFilteredRUS], d => d.Year);
 
       // Set the scales for x and y axes
       var x = d3.scaleLinear()
-        .domain([xMin, xMax]) // Set the x-axis domain to the minimum and maximum values
+        .domain(d3.extent(dataFiltered, d => d.Year))
         .range([0, width]);
   
       var y = d3.scaleLinear()
-        .domain([0, d3.max([...dataFilteredUSA, ...dataFilteredRUS], d => d.GPCT)]) // Use the maximum value from both datasets
+        .domain([0, d3.max(dataFiltered, d => d.GPCT)])
         .range([height, 0]);
   
-      // Create the line generators
-      var lineUSA = d3.line()
-        .x(d => x(d.Year))
-        .y(d => y(d.GPCT));
-
-      var lineRUS = d3.line()
+      // Create the line generator
+      var line = d3.line()
         .x(d => x(d.Year))
         .y(d => y(d.GPCT));
 
       // Append the path for the USA line
       svg.append("path")
-      .datum(dataFilteredUSA)
+      .datum(dataFiltered)
       .attr("stroke", "steelblue")
       .attr("stroke-width", 1.5)
       .attr("d", d3.line()
         .x(function(d) { return x(d.Year) })
         .y(function(d) { return y(d.GPCT) })
-        );
+        )
 
-
-      
   
       // Add x-axis
       svg.append("g")
