page1 chart fix15FILLNONE

--- a/p1winter.html
+++ b/p1winter.html
@@ -71,7 +71,7 @@
       // Append the path for the USA line
       // Add the line
     svg.append("path")
-      .datum(data)
+      .datum(dataFiltered)
       .attr("fill", "none")
       .attr("stroke", "steelblue")
       .attr("stroke-width", 1.5)
