page1 chart fixFill

--- a/p1winter.html
+++ b/p1winter.html
@@ -69,15 +69,13 @@
         .y(d => y(d.GPCT));
 
       // Append the path for the USA line
-      // Add the line
-    svg.append("path")
+      svg.append("path")
       .datum(dataFiltered)
-      .attr("fill", "none")
       .attr("stroke", "steelblue")
       .attr("stroke-width", 1.5)
       .attr("d", d3.line()
-        .x(function(d) { return x(d.date) })
-        .y(function(d) { return y(d.value) })
+        .x(function(d) { return x(d.Year) })
+        .y(function(d) { return y(d.GPCT) })
         )
 
   
