page1 chart fixFill4

--- a/p1winter.html
+++ b/p1winter.html
@@ -70,7 +70,8 @@
 
       // Append the path for the USA line
       svg.append("path")
-      .datum(dataFiltered).style("fill","none")
+      .datum(dataFiltered)
+      .attr("fill","none")
       .attr("stroke", "steelblue")
       .attr("stroke-width", 1.5)
       .attr("d", d3.line()
