page1 chart fixFILLUSAWORKS

--- a/p1winter.html
+++ b/p1winter.html
@@ -68,7 +68,7 @@
         .x(d => x(d.Year))
         .y(d => y(d.GPCT));
 
-      // Append the path for the USA line
+      // Append the path for the USA line:THIS WORKED
       svg.append("path")
       .datum(dataFiltered)
       .attr("fill","none")
