page1 chart addRUSred

--- a/p1winter.html
+++ b/p1winter.html
@@ -86,7 +86,7 @@
       svg.append("path")
       .datum(dataFilteredRUS)
       .attr("fill","none")
-      .attr("stroke", "steelblue")
+      .attr("stroke", "red")
       .attr("stroke-width", 1.5)
       .attr("d", d3.line()
         .x(function(d) { return x(d.Year) })
