page1 chart addOther fix yscale

--- a/p1winter.html
+++ b/p1winter.html
@@ -73,7 +73,7 @@
         .range([0, width]);
   
       var y = d3.scaleLinear()
-        .domain([0, d3.max(dataFilteredUSA, d => d.GPCT)])
+        .domain([0, 1])
         .range([height, 0]);
   
       // Create the line generator
