add image to homescreen

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     .dropdown {
       margin-top: 100px;
     }
+    .pic {
+      margin-top: 300px;
+      
+    }
   </style>
   <script src="https://d3js.org/d3.v6.min.js"></script>
 </head>
@@ -29,7 +33,7 @@
 
   <header>
     
-    Itay's CS 416 Olympics Gold Medal Data Viz:<br>
+    Welcome to Itay's CS 416 Olympics Gold Medal Data Viz:<br>
     USA Vs. The World
   </header>
   <div class ="dropdown">
@@ -37,6 +41,10 @@
 <button onclick="Summer()">Summer Olympics</button>
 <button onclick="SummerWinter()">Summer/Winter Olympics</button>
 <button onclick="Home()">Homescreen</button>
+</div>
+
+<div class ="dropdown">
+    <img src="https://i.dailymail.co.uk/1s/2021/07/13/17/45400971-9782677-image-m-52_1626193441272.jpg" alt="Image Description">
 </div>
 
 <script>
