need to trim summer and implement SW->currently its summer placeholder

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
   }
 
   function Winter() {
-    window.location.href = "p1winter.html";
+    window.location.href = "winter.html";
   }
 
   function Summer() {
-    window.location.href = "p1summer.html";
+    window.location.href = "summer.html";
   }
 
   function SummerWinter() {
-    window.location.href = "p1summerwinter.html";
+    window.location.href = "summerwinter.html";
   }
 </script>
+<html>
