updatefuncSW need to implement still

--- a/summerwinter.html
+++ b/summerwinter.html
@@ -114,7 +114,7 @@ function SummerWinter() {
   var globalVarCode = "";
   //var datalist = []
 
-  function updateFuncSummer() {
+  function updateFuncSW() {
   // IMPORATN LINE CLEAR AND REDRAW SVG
    d3.select("svg").remove()
    //alert("here")
