patch bug transition from s/w to SW all page transitions look good just need trim on summer graph and implement SW/annotations

--- a/summerwinter.html
+++ b/summerwinter.html
@@ -36,7 +36,7 @@
 <button onclick="Summer()">Summer Olympics</button>
 <button onclick="SummerWinter()">Summer/Winter Olympics</button>
 <button onclick="Home()">Homescreen</button>
-<button onclick="updateFuncSW()">Add Country(Summer)</button>
+<button onclick="updateFuncSW()">Add Country(Summer/Winter)</button>
   <!-- Dropdown to select a country QUOTES suck-->
   <select id="code">
     <option value="">Select Country</option>
