--- a/summerwinter.html
+++ b/summerwinter.html
@@ -152,7 +152,9 @@ function SummerWinter() {
         return d.Country === globalVarCode&& Number(d.Year) >= 1924;//convert year to Number DATA TYPE!!!
       });
       //updatechart
-      let insertIndex = dataFilteredUSA.findIndex(d => d.Year > 1980)
+      //SUMMER PATCH
+        //add usa 1980 = 0 in the correct spot for summer olympics
+        let insertIndex = dataFilteredUSA.findIndex(d => d.Year > 1980)
         dataFilteredUSA.splice(insertIndex, 0, {
     Year: 1980,
     GPCT: 0,
@@ -163,6 +165,52 @@ function SummerWinter() {
     GPCT: 0,
     // Add other properties if needed
   });
+      //WWII PATCH-START-SUMMERUPDATE
+      let insertIndex1940 = dataFilteredUSA.findIndex(d => d.Year > 1940)
+      let insertIndex1944 = dataFilteredUSA.findIndex(d => d.Year > 1944)
+      dataFilteredUSA.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.sort((a, b) => a.Year - b.Year);
+  //OTHER 
+  //WWII PATCH
+  insertIndex1940 = dataFilteredOther.findIndex(d => d.Year > 1940)
+      insertIndex1944 = dataFilteredOther.findIndex(d => d.Year > 1944)
+      dataFilteredOther.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.sort((a, b) => a.Year - b.Year);
+  //NEW
+  //WWII PATCH
+  insertIndex1940 = dataFilteredNew.findIndex(d => d.Year > 1940)
+      insertIndex1944 = dataFilteredNew.findIndex(d => d.Year > 1944)
+      dataFilteredNew.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredNew.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredNew.sort((a, b) => a.Year - b.Year);
+  
+  //WWII PATCH DONE-SUMMERUPDATE
 
   
       // Convert data to numeric values
@@ -273,8 +321,9 @@ var yAxis = d3.axisLeft(y)
         )
         //100-USA-NEEDS TO BE LAST LOGIC WISE FOR DATA ACCURACY
         dataFilteredOther.forEach(function (d) {
+        if (Number(d.Year)!= 1940 && Number(d.Year)!= 1944){
         d.Year = +d.Year;
-        d.GPCT = 100-d.GPCT;
+        d.GPCT = 100-d.GPCT;}
       });
         // Append the path for the Other line
       svg.append("path")
@@ -302,7 +351,52 @@ var yAxis = d3.axisLeft(y)
         return d.Country === globalVarCode;
       });
       //updatechart
-      
+      //WWII PATCH-START
+      let insertIndex1940 = dataFilteredUSA.findIndex(d => d.Year > 1940)
+      let insertIndex1944 = dataFilteredUSA.findIndex(d => d.Year > 1944)
+      dataFilteredUSA.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.sort((a, b) => a.Year - b.Year);
+  //OTHER 
+  //WWII PATCH
+  insertIndex1940 = dataFilteredOther.findIndex(d => d.Year > 1940)
+      insertIndex1944 = dataFilteredOther.findIndex(d => d.Year > 1944)
+      dataFilteredOther.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.sort((a, b) => a.Year - b.Year);
+  //NEW
+  //WWII PATCH
+  insertIndex1940 = dataFilteredNew.findIndex(d => d.Year > 1940)
+      insertIndex1944 = dataFilteredNew.findIndex(d => d.Year > 1944)
+      dataFilteredNew.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredNew.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredNew.sort((a, b) => a.Year - b.Year);
+  
+  //WWII PATCH DONE
 
   
       // Convert data to numeric values
@@ -413,8 +507,9 @@ var yAxis = d3.axisLeft(y)
         )
         //100-USA-NEEDS TO BE LAST LOGIC WISE FOR DATA ACCURACY
         dataFilteredOther.forEach(function (d) {
+        if (Number(d.Year)!= 1940 && Number(d.Year)!= 1944){
         d.Year = +d.Year;
-        d.GPCT = 100-d.GPCT;
+        d.GPCT = 100-d.GPCT;}
       });
         // Append the path for the Other line
       svg.append("path")
@@ -460,7 +555,9 @@ var yAxis = d3.axisLeft(y)
         return d.Country === 'USA'&&Number(d.Year) >= 1924;//convert year to Number DATA TYPE!!!;
       });
       //updatechart
-      let insertIndex = dataFilteredUSA.findIndex(d => d.Year > 1980)
+      //SUMMER PATCH
+        //add usa 1980 = 0 in the correct spot for summer olympics
+        let insertIndex = dataFilteredUSA.findIndex(d => d.Year > 1980)
         dataFilteredUSA.splice(insertIndex, 0, {
     Year: 1980,
     GPCT: 0,
@@ -471,6 +568,38 @@ var yAxis = d3.axisLeft(y)
     GPCT: 0,
     // Add other properties if needed
   });
+      //WWII PATCH-START
+      let insertIndex1940 = dataFilteredUSA.findIndex(d => d.Year > 1940)
+      let insertIndex1944 = dataFilteredUSA.findIndex(d => d.Year > 1944)
+      dataFilteredUSA.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.sort((a, b) => a.Year - b.Year);
+  //OTHER 
+  //WWII PATCH
+  insertIndex1940 = dataFilteredOther.findIndex(d => d.Year > 1940)
+      insertIndex1944 = dataFilteredOther.findIndex(d => d.Year > 1944)
+      dataFilteredOther.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.sort((a, b) => a.Year - b.Year);
+
+  
+  //WWII PATCH DONE-SUMMER
 
   
       // Convert data to numeric values
@@ -516,9 +645,10 @@ var yAxis = d3.axisLeft(y)
         .y(function(d) { return y(d.GPCT) })
         )
         //100-USA-NEEDS TO BE LAST LOGIC WISE FOR DATA ACCURACY
-      dataFilteredOther.forEach(function (d) {
+        dataFilteredOther.forEach(function (d) {
+        if (Number(d.Year)!= 1940 && Number(d.Year)!= 1944){
         d.Year = +d.Year;
-        d.GPCT = 100-d.GPCT;
+        d.GPCT = 100-d.GPCT;}
       });
         // Append the path for the Other line
       svg.append("path")
@@ -587,7 +717,38 @@ var yAxis = d3.axisLeft(y)
         return d.Country === 'USA';
       });
       //updatechart
-      
+      //WWII PATCH-START
+      let insertIndex1940 = dataFilteredUSA.findIndex(d => d.Year > 1940)
+      let insertIndex1944 = dataFilteredUSA.findIndex(d => d.Year > 1944)
+      dataFilteredUSA.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredUSA.sort((a, b) => a.Year - b.Year);
+  //OTHER 
+  //WWII PATCH
+  insertIndex1940 = dataFilteredOther.findIndex(d => d.Year > 1940)
+      insertIndex1944 = dataFilteredOther.findIndex(d => d.Year > 1944)
+      dataFilteredOther.splice(insertIndex1940, 0, {
+    Year: 1940,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.splice(insertIndex1944, 0, {
+    Year: 1944,
+    GPCT: 0,
+    // Add other properties if needed
+  });
+  dataFilteredOther.sort((a, b) => a.Year - b.Year);
+
+  
+  //WWII PATCH DONE-WINTER
 
   
       // Convert data to numeric values
@@ -633,9 +794,10 @@ var yAxis = d3.axisLeft(y)
         .y(function(d) { return y(d.GPCT) })
         )
         //100-USA-NEEDS TO BE LAST LOGIC WISE FOR DATA ACCURACY
-      dataFilteredOther.forEach(function (d) {
+        dataFilteredOther.forEach(function (d) {
+        if (Number(d.Year)!= 1940 && Number(d.Year)!= 1944){
         d.Year = +d.Year;
-        d.GPCT = 100-d.GPCT;
+        d.GPCT = 100-d.GPCT;}
       });
         // Append the path for the Other line
       svg.append("path")
