change title of index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Winter Olympics</title>
+  <title>Itay USA Olympics DATAVIZ CS416 Project</title>
   <style>
     body {
       font-family: Arial, sans-serif;
